# Who_need_spotify-

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
.github/: copilot-instructions.md
common/: wsn_Common.hpp  wsn_ErrorCodes.hpp
docker/: .dockerignore  Dockerfile  docker-compose.yml
inc/buffer/: wns_BufferManagement.hpp
inc/filters/: wns_BiquadFilter.hpp
inc/kernels/: wns_BiquadFilter.hpp  wns_FFT.hpp
inc/modules/: wns_Compressor.hpp  wns_CorrectiveEQ.hpp  wns_Dithering.hpp  wns_DynamicEQ.hpp  wns_Enhancer.hpp  wns_FFT.hpp  wns_FrequencyCleanup.hpp  wns_Limiter.hpp  wns_NoiseReduction.hpp  wns_Preprocessing.hpp  wns_Reverb.hpp  wns_SpectralSmoothing.hpp  wns_TonalShaping.hpp
inc/pipeline/: IAudioModules.hpp
scripts/: build.sh  generate_overshoot.py  generate_tones.py  plot_log.py  run.sh  run_tests.sh
src/: CMakeLists.txt  main.cpp
src/buffer/: wns_BufferManagement.cpp
src/filters/: wns_BiquadFilter.cpp
src/kernels/: wns_BiquadFilter.cpp  wns_FFT.cpp
src/modules/: wns_BiquadFilter.cpp  wns_Compressor.cpp  wns_CorrectiveEQ.cpp  wns_Dithering.cpp  wns_DynamicEQ.cpp  wns_Enhancer.cpp  wns_FFT.cpp  wns_FrequencyCleanup.cpp  wns_Limiter.cpp  wns_NoiseReduction.cpp  wns_Preprocessing.cpp  wns_Reverb.cpp  wns_SpectralSmoothing.cpp  wns_TonalShaping.cpp
test/: CMakeLists.txt
test/scripts/: plot_frequency_response.py
test/utest/: CMakeLists.txt  wns_fft_utest.cpp
utils/: wsn_utils.hpp
